<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white_background"
    tools:context=".Page8">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/dictionary"
        android:textColor="@color/blue_app"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/blue_app"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
    <Spinner
        android:id="@+id/spinner_levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />
-->

    <Button
        android:id="@+id/button_a1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/blue_button_bg"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/a1"
        android:textColor="@color/blue_app"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toStartOf="@+id/button_a2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <Button
        android:id="@+id/button_a2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/blue_button_bg"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/a2"
        android:textColor="@color/blue_app"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_a1"
        app:layout_constraintEnd_toStartOf="@+id/button_b1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_a1" />

    <Button
        android:id="@+id/button_b1"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/blue_button_bg"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/b1"
        android:textColor="@color/blue_app"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_a2"
        app:layout_constraintEnd_toStartOf="@+id/button_b2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_a2" />

    <Button
        android:id="@+id/button_b2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/blue_button_bg"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/b2"
        android:textColor="@color/blue_app"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_b1"
        app:layout_constraintEnd_toStartOf="@+id/button_c1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_b1" />

    <Button
        android:id="@+id/button_c1"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/blue_button_bg"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/c1"
        android:textColor="@color/blue_app"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_b2" />

    <Spinner
        android:id="@+id/spinner_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_b1" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_topics" />

    <TextView
        android:id="@+id/text_view_topic_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_search" />

    <ListView
        android:id="@+id/list_view_vocab"
        android:layout_width="0dp"
        android:layout_height="315dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_topic_name" />


</androidx.constraintlayout.widget.ConstraintLayout>