...

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_goals"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/card_view_dictionary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
...
